--- a/CSS/home.css
+++ b/CSS/home.css
@@ -18,8 +18,55 @@ body {
     background-attachment: fixed;  
     background-size: cover;
     color: #FFFFFF;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
 }
 .header {
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+    border: 1px solid #FFFFFF;
+}
+.brand {
+    padding-left: 40px;
+}
+.menu {
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 40px;
+}
+.menu p {
+    max-width: 50px;
+    padding: 10px;
+    text-align: center;
+}
+.menu p:first-child {
+    border-bottom: 2px solid #FFFFFF;
+}
+.sign-in {
+    margin: auto;
+    margin-right: 40px;
+    padding: 10px 20px;
+    border-radius: 16px;
+}
+.bottom {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    border: 1px solid #FFFFFF;
+}
+.follow {
+    margin: auto;
+}
+.follow div {
+    display: grid;
+    padding: 10px;
+    grid-template-columns: auto 1fr;
+    grid-gap: 5px;
+}
+.contact {
+    margin: auto;
+}
+.logo {
+    width: 20px;
+    margin: auto;
 }
