--- a/CSS/location.css
+++ b/CSS/location.css
@@ -13,19 +13,15 @@ body {
 .container {
     width: 100vw;
     height: 100vh;
-    background-image: url(../IMAGE/home.png);
-    background-position: 0 -300px;
-    background-repeat: no-repeat;
-    background-attachment: fixed;  
-    background-size: cover;
-    color: #FFFFFF;
+    background-color: #FFFFFF;
+    color: #000000;
     display: grid;
     grid-template-rows: auto 1fr auto;
 }
 .header {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    border: 1px solid #FFFFFF;
+    border: 1px solid #000000;
 }
 .brand {
     padding-left: 40px;
@@ -38,13 +34,13 @@ body {
 }
 .menu a {
     text-decoration: none;
-    color: #FFFFFF;
+    color: #000000;
     max-width: 50px;
     padding: 10px;
     text-align: center;
 }
 .menu a:nth-child(3) {
-    border-bottom: 2px solid #FFFFFF;
+    border-bottom: 2px solid #000000;;
 }
 .head-left {
     margin: auto;
@@ -61,11 +57,52 @@ body {
     margin-right: 40px;
     padding: 10px 20px;
     border-radius: 16px;
+    background-color: #AE6439;
+    border: 2px solid #D9D9D9;
+}
+.main {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+.locations {
+    padding: 20px;
+}
+.location {
+    background-color: #D9D9D9;
+    display: grid;
+    grid-template-columns: 1fr auto;
+    padding: 20px;
+    grid-gap: 20px;
+}
+.where {
+    height: 100px;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+}
+.where p {
+    margin: auto;
+    margin-left: 0;
+}
+.order {
+    margin: auto;
+    padding: 10px 20px;
+    border-radius: 16px;
+    background-color: #AE6439;
+    border: none;
+    color: #FFFFFF;
+}
+.button-link {
+    color: #FFFFFF;
+    text-decoration: none;
+}
+.map {
+    width: 100%;
+    height: 100%;
 }
 .bottom {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    border: 1px solid #FFFFFF;
+    border: 1px solid #000000;
 }
 .follow {
     margin: auto;
@@ -82,4 +119,5 @@ body {
 .logo {
     width: 20px;
     margin: auto;
+    filter: brightness(0);
 }
