--- a/CSS/home.css
+++ b/CSS/home.css
@@ -44,25 +44,40 @@ body {
     text-align: center;
 }
 
-.about {
-    color: #FFFFFF;
-}
 .about-chose {
-    cursor: pointer;
+    padding: 10px;
+    cursor: context-menu;
+    background: none;
+    margin: auto;
 }
+
 .about-content {
     display: none;
-    background-color: #ae6439;
     position: absolute;
-    width: 150px;
+    text-align: center;
+    border-radius: 8px;
 }
+
 .about-content a {
+    max-width: none;
+    padding: 10px 20px;
     color: #FFFFFF;
-    padding: 10px;
-}
-.about-chose:hover .about-content {
+    background-color: #AE6439;
     display: block;
-    
+    border: 1px solid #FFFFFF;
+}
+.about-content a:first-child {
+    border-radius: 8px 8px 0px 0px;
+}
+.about-content a:last-child {
+    border-radius: 0px 0px 8px 8px;
+}
+
+.about:hover .about-content {
+    display: block;
+}
+.about-content:hover {
+    display: block;
 }
 .chose {
     border-bottom: 2px solid #FFFFFF;
