--- a/CSS/location.css
+++ b/CSS/location.css
@@ -29,19 +29,22 @@ body {
 .menu {
     margin: auto;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 40px;
+    grid-template-columns: repeat(3, 1fr) auto;
+    grid-gap: 20px;
 }
 .menu a {
     text-decoration: none;
     color: #000000;
     max-width: 50px;
-    padding: 10px;
+    padding: 10px 20px;
     text-align: center;
 }
 
 .about-chose {
-    padding: 10px;
+    box-sizing: border-box;
+    width: 120px;
+    text-align: center;
+    padding: 10px 0px;
     cursor: context-menu;
     background: none;
     margin: auto;
