--- a/CSS/cart.css
+++ b/CSS/cart.css
@@ -12,20 +12,15 @@ body {
 }
 .container {
     width: 100vw;
-    height: 100vh;
-    background-image: url(../IMAGE/home.png);
-    background-position: 0 -300px;
-    background-repeat: no-repeat;
-    background-attachment: fixed;  
-    background-size: cover;
-    color: #FFFFFF;
+    background-color: #FFFFFF;
+    color: #000000;
     display: grid;
     grid-template-rows: auto 1fr auto;
 }
 .header {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    border: 1px solid #FFFFFF;
+    border: 1px solid #000000;
 }
 .brand {
     padding-left: 40px;
@@ -38,7 +33,7 @@ body {
 }
 .menu a {
     text-decoration: none;
-    color: #FFFFFF;
+    color: #000000;
     max-width: 50px;
     padding: 10px 20px;
     text-align: center;
@@ -114,6 +109,31 @@ body {
     grid-template-columns: 1fr 1fr;
     border: 1px solid #FFFFFF;
 }
+.main {
+    display: grid;
+    grid-template-columns: 1fr 300px;
+}
+.left-main{
+    border: 1px solid #000000;
+    padding: 20px;
+}
+.right-main{
+    border: 1px solid #000000;
+    padding: 20px;
+}
+.carts {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
+}
+.cart {
+    height: 400px;
+    border: 1px solid black;
+    padding: 20px;
+}
+.cart img {
+    width: 100%;
+}
 .follow {
     margin: auto;
 }
@@ -129,4 +149,5 @@ body {
 .logo {
     width: 20px;
     margin: auto;
+    filter: brightness(0);
 }
