--- a/CSS/menu.css
+++ b/CSS/menu.css
@@ -27,6 +27,7 @@ body {
     grid-template-columns: repeat(3, 1fr);
     border-bottom: 1px solid #FFFFFF;
     backdrop-filter: brightness(40%);
+    z-index: 9;
 }
 h1 {
     font-weight: 100;
@@ -65,6 +66,7 @@ h1 {
     position: absolute;
     text-align: center;
     border-radius: 8px;
+    z-index: 10;
 }
 
 .about-content a {
@@ -122,7 +124,7 @@ h1 {
 .head {
     position: relative;
     width: 100%;
-    padding: 40px;
+    padding: 20px 40px;
     box-sizing: border-box;
     backdrop-filter: brightness(50%);
 }
@@ -132,7 +134,7 @@ h1 {
     height: auto;
 }
 .text-overlay {
-    padding: 20px;
+    padding: 20px 0px;
     position: absolute;
     top: 5%;
     left: 5%;
