--- a/CSS/our-story.css
+++ b/CSS/our-story.css
@@ -24,6 +24,7 @@ body {
     grid-template-columns: repeat(3, 1fr);
     border-bottom: 1px solid #FFFFFF;
     backdrop-filter: brightness(40%);
+    z-index: 9;
 }
 .brand {
     padding-left: 40px;
@@ -57,6 +58,7 @@ body {
     position: absolute;
     text-align: center;
     border-radius: 8px;
+    z-index: 10;
 }
 
 .about-content a {
