--- a/CSS/home.css
+++ b/CSS/home.css
@@ -14,12 +14,113 @@ body {
     width: 100vw;
     height: 100vh;
     background-image: url(../IMAGE/home.png);
+    background-position: 0 -50px;
     background-repeat: no-repeat;
     background-attachment: fixed;  
     background-size: cover;
     color: #FFFFFF;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
 }
 .header {
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+    border: 1px solid #FFFFFF;
+}
+.brand {
+    padding-left: 40px;
+}
+.menu {
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr) auto;
+    grid-gap: 20px;
+}
+.menu a {
+    text-decoration: none;
+    color: #FFFFFF;
+    max-width: 50px;
+    padding: 10px 20px;
+    text-align: center;
+}
+
+.about-chose {
+    box-sizing: border-box;
+    width: 120px;
+    text-align: center;
+    padding: 10px 0px;
+    cursor: context-menu;
+    background: none;
+    margin: auto;
+}
+
+.about-content {
+    display: none;
+    position: absolute;
+    text-align: center;
+    border-radius: 8px;
+}
+
+.about-content a {
+    max-width: none;
+    padding: 10px 20px;
+    color: #FFFFFF;
+    background-color: #AE6439;
+    display: block;
+    border: 1px solid #FFFFFF;
+}
+.about-content a:first-child {
+    border-radius: 8px 8px 0px 0px;
+}
+.about-content a:last-child {
+    border-radius: 0px 0px 8px 8px;
+}
+
+.about:hover .about-content {
+    display: block;
+}
+.about-content:hover {
+    display: block;
+}
+.chose {
+    border-bottom: 2px solid #FFFFFF;
+}
+.head-left {
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat( 3,auto);
+    grid-gap: 20px;
+}
+.head-left a {
+    max-width: 20px;
+    padding: 10px;
+}
+.sign-in {
+    margin: auto;
+    margin-right: 40px;
+    padding: 10px 20px;
+    border-radius: 16px;
+    cursor: pointer;
+    background-color: #000000;
+    border: 2px solid #FFFFFF;
+}
+.button-link {
+    color: #FFFFFF;
+    text-decoration: none;
+}
+.follow {
+    margin: auto;
+}
+.follow div {
+    display: grid;
+    padding: 10px;
+    grid-template-columns: auto 1fr;
+    grid-gap: 5px;
+}
+.contact {
+    margin: auto;
+}
+.logo {
+    width: 20px;
+    margin: auto;
 }
