--- a/CSS/our-story.css
+++ b/CSS/our-story.css
@@ -20,11 +20,19 @@ body {
     color: #FFFFFF;
 }
 .header {
+    position: relative;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     border-bottom: 1px solid #FFFFFF;
     backdrop-filter: brightness(40%);
     z-index: 9;
+}
+h1 {
+    font-weight: 100;
+}
+.header h1 {
+    font-size: 45px;
+    margin: 20px;
 }
 .brand {
     padding-left: 40px;
