--- a/CSS/our-story.css
+++ b/CSS/our-story.css
@@ -11,7 +11,7 @@
 }
 .font-Italianno{
     font-family: 'Italianno';
-    color: #AE6439;
+    color: white;
     font-size: 40px;
 }
 h1 {
@@ -47,6 +47,7 @@ h1 {
 }
 .brand {
     padding-left: 40px;
+
 }
 .menu {
     margin: auto;
