--- a/CSS/menu.css
+++ b/CSS/menu.css
@@ -168,6 +168,7 @@ h1 {
     height: 300px;
     overflow: hidden;
     position: relative;
+    object-fit: cover;
 }
 .product {
     height: 100%;
