--- a/CSS/mobile-app.css
+++ b/CSS/mobile-app.css
@@ -1,14 +1,21 @@
 @font-face {
-    font-family: 'CustomFont'; /* Name your font family */
+    font-family: 'Italianno'; /* Name your font family */
     src: url('../FONT/Italianno-Regular.ttf'); /* Locate the .ttf file within your directory*/
   }
+  @font-face {
+    font-family: 'Jacques Francois';
+    src: url(../FONT/JacquesFrancois-Regular.ttf);
+}
   .font-Italianno{
     font-family: 'Italianno';
     color: white;
-    font-size: 40px;
 }
 h1 {
     font-family: 'CustomFont', sans-serif; /* Use the font family */
+}
+.main h1{
+    font-family: 'Jacques Francois';
+    font-weight: 500;
 }
 body {
     background-color: black;
@@ -34,6 +41,9 @@ body {
 }
 .brand {
     padding-left: 40px;
+    font-family: 'Italianno';
+    color: white;
+    font-weight: 500;
 }
 .menu {
     margin: auto;
